2010-11-07  Rajarshi Guha  <guhar@hmmercadowiwxp.od.nih.gov>

	* R/read.R: Updaetd the CDK line parser to extract the 
	molecule id and return it so that the fingerpint object
	contains the molecule id

2010-10-20  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/read.R (fp.read): Updated to support reading of feature
	fingerprints. The user must now indicate whether a binary or a
	feature fingerprint is being read. Also added a new line parsing
	function to process generic feature fingerprints.

	* R/misc.R: Added similarity metrics for feature
	fingerprints. Currently tanimoto, dice and robust metrics are
	supported. 

	* R/featurefp.R: Added a class to support fingerprints that are
	represented as lists of numeric or string features such as
	circular fingerprints. Also added a method to convert a collection
	of feature fingerprints to a fixed-length binary string
	representation. 

	* man/featvec.Rd: Added man page for te featvec class, used to
	represent fingerprints characterized as numeric or character
	features
	

2010-06-02  Rajarshi  Guha  <rguha@Macintosh-5.local>

	* R/balance.R (balance): Added a method to generate balanced fingerprints, which have 
	50% bit density, but are 2x the size of the input fingerprints.

	* R/bitimp.R (bit.importance): Added a function to evaluate the importance of each bit
	in a binary fingerprint in terms of the Kullback Liebler divergence between a set of
	actives and a background collection.
	
