@@ -1,6 +1,6 @@
 Package: fingerprint
-Version: 3.4.1
-Date: 2010-11-07
+Version: 3.4.2
+Date: 2011-04-14
 Title: Functions to operate on binary fingerprint data
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
