@@ -1,1 +1,0 @@
-S3method(hasNext, iload.molecules)
